# cubzh

./: .gitattributes  .gitignore  BUILD.bazel  WORKSPACE  bazel-bin  bazel-cubzh  bazel-out  bazel-testlogs
.github/workflows/: core-clang-format.yml  lua-modules-linter.yml
bundle/: config.json
core/: camera.c  camera.h  config.h  inputs.h  light.h  quad.c  quad.h  rigidBody.c  scene.c  serialization.c  serialization.h  serialization_gltf.c  shape.c  shape.h  transform.c  transform.h  world_text.c  world_text.h
core/tests/: test_shape.h
i18n/: es.json  fr.json  it.json  ja.json  jp.json  pl.json  pt.json  ru.json  ua.json
i18n/generate/: main.go
lua/docs/content/: sample-scripts.yml
lua/docs/content/reference/: assets.yml  box.yml  camera.yml  dev.yml  index.yml  light.yml  mesh.yml  mutableshape.yml  object.yml  quad.yml  shape.yml  text.yml
lua/modules/: api.lua  avatar.lua  badge.lua  badge_modal.lua  camera.lua  camera_modes.lua  ccc.lua  coins.lua  controls.lua  creations.lua  cubzh.lua  friends.lua  item_details.lua  item_editor.lua  item_grid.lua  jumpfly.lua  localevent.lua  localize.lua  massloading.lua  menu.lua  modal.lua  notifications.lua  passkey.lua  profile.lua  settings.lua  signup.lua  system_api.lua  transformgizmo.lua  ui_avatar.lua  ui_avatar_editor.lua  uikit.lua  username_form.lua  world.lua  world_details.lua  world_editor.lua  world_editor_common.lua
misc/font/: font.psd
shaders/: fs_font_common.sh  fs_mesh_common.sh  fs_quad_common.sh  fs_transparency_weight_common.sh  vs_quad_common.sh
shaders/include/: config.sh  font_lib.sh  quad_lib.sh
